--- a/app/views/chat/new.html.erb
+++ b/app/views/chat/new.html.erb
@@ -4,11 +4,11 @@
     
     알려주고싶은말
   
-    <input type="text" name="ask"class="form-control" placeholder="알려주고싶은말..">
+    <input type="text" name="ask" class="form-control" placeholder="알려주고싶은말..">
     <br>
     그에 대한 답
-    <input type="text" name="answer"class="form-control" placeholder="그에 대한답.."><br>
-    <input type="submit">
+    <input type="text" name="answer" class="form-control" placeholder="그에 대한답.."><br>
+    <input class="btn btn-warning" style="width:100%;" type="submit">
 
 </form>
 </div>
