--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -14,3 +14,49 @@
   padding:5px;
   margin: 0 auto 10px;
 }
+.view{
+  
+  background: image-url('iphone_6') no-repeat center center;
+  background-size: 75%;
+}
+.view_phone{
+  // background-size: 75%;
+  height:550px;
+  // height:495px;
+  width:310px;
+  margin-top: 205px;
+  margin-right: 30px;
+  margin-bottom: 45px;
+  // margin-bottom: 45px;
+  margin-left: 30px;
+}
+
+
+
+
+// .iphone{
+//   // background: image-url('iphone_s') no-repeat center center;
+//   // background-size:75%;
+  
+// }
+
+// .main{
+//   // background: image-url('iphone_s') no-repeat center center;
+//   // background-size:75%;
+  
+//     // padding-top: 45px;
+//     // padding-right: 30px;
+//     // padding-bottom: 45px;
+//     // padding-left: 30px;
+
+// }
+
+// .chat{
+//   background: image-url('iphone_s') no-repeat center center;
+//   background-size:25%;
+//   margin-top: 45px;
+//     margin-right: 30px;
+//     margin-bottom: 45px;
+//     margin-left: 30px;
+  
+// }
